# Facegate

./: .gitignore  CMakeLists.txt  CMakeLists.txt.save  LICENSE  MobileFaceNet.onnx  MobileFaceNet_FP16.onnx  README.md  apiservice.cpp  apiservice.h  attendanceservice.cpp  attendanceservice.h  camerathread.cpp  camerathread.h  cameraworker.cpp  cameraworker.h  capturadialog.cpp  capturadialog.h  capturadialog.ui  capturastep.cpp  capturastep.h  circularprogress.cpp  circularprogress.h  colaboradores.db  database.cpp  database.h  databasemanager.cpp  databasemanager.h  face_landmarks_3d68.cpp  face_landmarks_3d68.h  facedatabase.cpp  facedatabase.h  facedetectionworker.cpp  facedetectionworker.h  faceembedder.cpp  faceembedder.h  facelandmarks.h  facelandmarks106.cpp  facelandmarks106.h  facelandmarks_dummy.h  facelandmarks_onnx106.cpp  (+18 more)
